--- a/cesium-ion-revit/UploadDialog.xaml
+++ b/cesium-ion-revit/UploadDialog.xaml
@@ -1,12 +1,14 @@
-﻿<UserControl x:Class="Cesium.Ion.Revit.UploadDialog"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Cesium.Ion.Revit"
-             mc:Ignorable="d" 
-             Height="300" Width="450">
-    <Grid Margin="10,10,10,10">
+﻿<Window
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+            x:Class="Cesium.Ion.Revit.UploadDialog"
+            mc:Ignorable="d" 
+            Title="Cesium ion"
+            ResizeMode="NoResize"
+            SizeToContent="WidthAndHeight">
+    <Grid Height="300" Width="450" Margin="10,10,10,10">
         <Image HorizontalAlignment="Center" VerticalAlignment="Top" Width="300" Margin="0" RenderTransformOrigin="0.5,0.5" >
             <Image.Source>
                 <BitmapImage UriSource="Resources/ion-logo.png" />
@@ -28,4 +30,4 @@
         <Button Content="Upload" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Click="OnUploadClick" Margin="0,0,80,0"/>
         <CheckBox x:Name="UseWebPCheckbox" Content="Use WebP" HorizontalAlignment="Left"  VerticalAlignment="Top" RenderTransformOrigin="2.042,-2.667" Margin="0,225,0,0" />
     </Grid>
-</UserControl>
+</Window>
